--- a/src/client/company-store/src/App.css
+++ b/src/client/company-store/src/App.css
@@ -24,6 +24,11 @@
   color: white;
 }
 
+mgt-login {
+  --padding: 10px;
+  --button-background-color--hover: transparent;
+}
+
 .App-link {
   color: #61dafb;
 }
