--- a/src/client/company-store/src/App.css
+++ b/src/client/company-store/src/App.css
@@ -29,6 +29,32 @@ mgt-login {
   --button-background-color--hover: transparent;
 }
 
+mgt-people-picker {
+  --input-border: 1px solid #605e5c; /* sets all input area border */
+}
+
+#outer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1000;
+}
+
+#table-container {
+  height: 100%;
+  width: 100%;
+  display: table;
+  top: 50%;
+}
+
+#table-cell {
+  vertical-align: middle;
+  height: 100%;
+  display: table-cell;
+}
+
 .App-link {
   color: #61dafb;
 }
